--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,24 @@
 asgiref==3.4.1
+astroid==2.5.6
 certifi==2021.10.8
 charset-normalizer==2.0.7
-click==8.0.3
-Flask==2.0.2
+gunicorn==20.1.0
 idna==3.3
-itsdangerous==2.0.1
-Jinja2==3.0.3
-MarkupSafe==2.0.1
-praw==7.4.0
+isort==5.8.0
+lazy-object-proxy==1.6.0
+mccabe==0.6.1
+numpy==1.21.4
+pandas==1.3.4
+Pillow==8.2.0
 prawcore==2.3.0
-pytz==2021.3
+pylint==2.8.3
+python-dateutil==2.8.2
+pytz==2021.1
 requests==2.26.0
+six==1.16.0
 sqlparse==0.4.2
+toml==0.10.2
 update-checker==0.18.0
 urllib3==1.26.7
 websocket-client==1.2.1
-Werkzeug==2.0.2
+wrapt==1.12.1
